internal/kgateway/setup/testdata/accesslog-filtercel-httplisteneropt.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 8081
      name: other
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: gwtest
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: reviews
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: reviews-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: reviews
    app: reviews
    service: reviews
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.1.11
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: reviews-1
      namespace: default
ports:
  - name: http
    port: 8080
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: gwtest
spec:
  parentRefs:
    - name: http-gw-for-test
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - name: reviews
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: log-test
  namespace: gwtest
  labels:
    app: log-test
    service: log-test
spec:
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
  selector:
    app: log-test
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: log-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: log-test
    app: log-test
    service: log-test
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.1.11
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: log-test
      namespace: gwtest
ports:
  - name: grpc
    port: 50051
    protocol: TCP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: HTTPListenerPolicy
metadata:
  name: accesslog
  namespace: gwtest
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: http-gw-for-test
  accessLog:
    - grpcService:
        logName: "test-accesslog-service"
        backendRef:
          name: log-test
          port: 50051
      filter:
        celFilter:
          match: "request.headers['test'].contains('cool-beans')"
